# rabbit

./: .gitignore  CMakeLists.txt  README.md  app.ts  global.d.ts  globals.d.ts  index.html  main.ts  package.json  styles.scss  tsconfig.json  tslint.json
tools/: Watcher.js  build.sh  deps-deb.sh  dev.sh  electron.sh  format.sh  http.sh  lint.sh  tsc.sh  xephyr.sh  xinit.sh
wm/: main.c  window_manager.c  window_manager.h
